--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
             name: test with OCB
             makepot: "true"
           - container: ghcr.io/oca/oca-ci/py3.6-odoo14.0:latest
-            include: "purchase_order_type"
+            include: "purchase_order_type,purchase_order_type_dashboard"
             name: test with Odoo
           - container: ghcr.io/oca/oca-ci/py3.6-ocb14.0:latest
             include: "purchase_order_type,purchase_order_type_dashboard"
@@ -64,7 +64,7 @@ jobs:
             name: test with OCB
             makepot: "true"
           - container: ghcr.io/oca/oca-ci/py3.6-odoo14.0:latest
-            exclude: "purchase_cancel_reason,purchase_cancel_confirm,purchase_order_type,purchase_quick"
+            exclude: "purchase_cancel_reason,purchase_cancel_confirm,purchase_order_type,purchase_order_type_dashboard,purchase_quick"
             name: test with Odoo
           - container: ghcr.io/oca/oca-ci/py3.6-ocb14.0:latest
             exclude: "purchase_cancel_reason,purchase_cancel_confirm,purchase_order_type,purchase_order_type_dashboard,purchase_quick"
